View Issue Details

IDProjectCategoryView StatusLast Update
0022800Open CASCADEOCCT:Samplespublic2012-03-29 17:26
ReporterszvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022800: OSD::SetSignal(Standard_True) is not called in the standard samples
DescriptionThe absence of call OSD::SetSignal(Standard_True) in the standard samples leads to problems in Data Exchange functionality (failures during reading of STEP and IGES files).

I suggest to insert this call into the constructor of OCC_BaseApp.
TagsNo tags attached.
Test case numberTest case is not required

Activities

szv

2011-11-09 10:59

manager   ~0018498

The fix is committed to http://svn/svn/occt/branches/0022331.

The fix also contain additional improvements in BRep_Tool.cxx, in connection with 22331.

Andrey, could you please revise the fix?

abv

2011-11-15 12:50

manager   ~0018547

Code review remarks:

1. Please take care of setting appropriate status on the issue (e.g. set Resolved if you made a fix and want it to be reviewed)

2. Please use branch name the same as issue id when possible (note that branch can be renamed easily)

3. Please revert or revise change in BRep_Tool.cxx: moving static objects to the inside functions does not make them local, but gives the chance to get into concurrent initialization in the case if the function gets called for the first time from several threads simultaneously (it happens in reality!).

4. I wonder how long it took to introduce this obvious change. Well, late is better than never

szv

2011-11-15 13:30

manager   ~0018548

Suggestion (3) is implemented, the branch in SVN is updated.
Please test the fix.

mkv

2011-11-17 13:06

tester   ~0018568

Dear BugMaster,
Workbench KAS:dev:mkv-22800-occt was created from SVN branch http://svn/svn/occt/branches/0022331
(and mkv-22800-products from trunk) and compiled on Linux platform.

There are not regressions in mkv-22800-products regarding to KAS:dev:products-652-opt:

See results in /dn45/occttests/results/KAS/dev/mkv-22800-products_15112011/lin
See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin
See test cases in /dn45/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

bugmaster

2011-11-18 13:22

administrator   ~0018581

Fix has been integrated into occt repository

Date: 2011-11-18 13:21:42 +0400 (Fri, 18 Nov 2011)
New Revision: 9430

Modified:
   trunk/samples/mfc/standard/Common/OCC_BaseApp.cpp
   trunk/src/BRep/BRep_Tool.cxx
   trunk/src/SelectMgr/SelectMgr_SelectableObject.cxx

Related Changesets

occt: master 2b442de5

2011-11-18 09:21:42

szv


Committer: bugmaster Details Diff
0022800: OSD::SetSignal(Standard_True) is not called in the standard samples Affected Issues
0022800
mod - samples/mfc/standard/Common/OCC_BaseApp.cpp Diff File
mod - src/BRep/BRep_Tool.cxx Diff File
mod - src/SelectMgr/SelectMgr_SelectableObject.cxx Diff File

Issue History

Date Modified Username Field Change
2011-11-09 10:12 szv New Issue
2011-11-09 10:12 szv Assigned To => bugmaster
2011-11-09 10:59 szv Note Added: 0018498
2011-11-09 10:59 szv Assigned To bugmaster => abv
2011-11-09 10:59 szv Status new => assigned
2011-11-09 10:59 szv Resolution open => fixed
2011-11-15 12:50 abv Note Added: 0018547
2011-11-15 12:50 abv Assigned To abv => szv
2011-11-15 13:30 szv Note Added: 0018548
2011-11-15 13:30 szv Assigned To szv => bugmaster
2011-11-15 13:30 szv Status assigned => reviewed
2011-11-17 13:06 mkv Note Added: 0018568
2011-11-17 13:06 mkv Test case number => Test case is not required
2011-11-17 13:06 mkv Status reviewed => tested
2011-11-18 13:22 bugmaster Note Added: 0018581
2011-11-18 13:22 bugmaster Status tested => verified
2011-11-23 16:28 bugmaster Target Version => 6.5.3
2012-03-29 17:26 bugmaster Changeset attached => occt master 2b442de5
2014-01-11 11:59 abv Category OCCT Release:MFC => OCCT Release:Samples
2014-01-11 12:02 abv Category OCCT Release:Samples => OCCT:Samples