0022800: OSD::SetSignal(Standard_True) is not called in the standard samples